fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,7 +113,7 @@ p {
 
 .img6 {
     display: flex;
-    width: 100%; 
+    width: 150%; 
     margin-bottom: 20px;
     border-radius: var(--imageborderradius);
     border: var(--imageborder);
@@ -141,7 +141,7 @@ p {
     border-style: none;
     position: relative;   
     margin: auto;
-    margin-left: 50px;
+    margin-left: 230px;
 }
 
 
